# resume-role-analyzer-ai

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  compose.yaml
ai/: pyproject.toml
ai/src/resume_role_ai/: career_corpus.py  cli.py  dataset.py  matcher.py  onet.py  parser.py  paths.py  predictor.py  semantic.py  skill_matching.py  training.py
ai/src/resume_role_ai/models/: __init__.py  job.py  resume.py
ai/tests/: test_career_corpus.py  test_dataset.py  test_matcher.py  test_onet.py  test_parser.py  test_predictor.py  test_semantic.py
api/: AnalyzerRunner.cs  ApiModels.cs  ModelMetricsReporter.cs  Program.cs  ProjectPaths.cs  appsettings.json
api.tests/: ApiFactory.cs  ApiTests.cs  ResumeRoleAnalyzer.Api.Tests.csproj
datasets/raw/: job_positions.csv
web/: app.js  index.html  styles.css
