[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-role-analyzer-ai"
version = "0.1.0"
description = "AI and data pipeline for resume role analysis."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=18.0",
    "scikit-learn>=1.5",
    "pydantic>=2.8",
    "pypdf>=5.0",
    "sentence-transformers>=5.6,<6",
]

[project.scripts]
resume-role-analyzer = "resume_role_ai.cli:main"
prepare-resume-training-data = "resume_role_ai.dataset:main"
train-resume-matcher = "resume_role_ai.training:main"
import-onet-catalog = "resume_role_ai.onet:main"
evaluate-career-corpus = "resume_role_ai.career_corpus:main"
build-catalog-ranker = "resume_role_ai.semantic:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
